[gd_scene load_steps=7 format=3 uid="uid://dabd5ppudandn"]

[ext_resource type="Script" uid="uid://ldfi3b7jsp3j" path="res://Player/Weapon Manager/Projectiles/pistol_bullet.gd" id="1_vdpqf"]
[ext_resource type="AudioStream" uid="uid://dcxiloqhoffi8" path="res://Assets/audio/080998_bullet-hit-39870.mp3" id="2_kaddk"]
[ext_resource type="AudioStream" uid="uid://ctrnngh4m6tmh" path="res://Assets/audio/small-explosion-94980.mp3" id="3_jvhi3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4l5th"]
albedo_color = Color(0.49187428, 0.4918744, 0, 1)
emission_enabled = true
emission = Color(0.82140386, 0, 0.039714895, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vdpqf"]
material = SubResource("StandardMaterial3D_4l5th")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6fg75"]

[node name="pistol bullet" type="RigidBody3D"]
collision_layer = 4
collision_mask = 13
gravity_scale = 0.0
continuous_cd = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_vdpqf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, -4.371139e-09, -0.1, 0, 0.1, -4.371139e-09, 0, 0.0005964227, 0.002110958)
mesh = SubResource("CapsuleMesh_vdpqf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, -4.371139e-09, -0.1, 0, 0.1, -4.371139e-09, 0, 0.0005964227, 0.002110958)
shape = SubResource("CapsuleShape3D_6fg75")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="hit_not_enemy" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_kaddk")

[node name="hit_enemy" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_jvhi3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
